# a-perceptron

./: .gitignore  CMakeLists.txt  README.md  a-perceptron.ipynb  gradient-descent.ipynb
include/: gradient-descent.hpp  mlp.hpp  perceptron.hpp
src/: gradiente-descent.cpp  main.cpp  mlp.cpp  perceptron.cpp
test/: a-perceptron.ipynb  gradient-descent.ipynb  multilayer-perceptron.ipynb
